# art

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN_SYSTEM.md  GENERATIVE_ARCHITECTURE.md  QUICK_REFERENCE.md  accessibility.css  accessibility.js  ai-video-architecture.html  awkronos-pitch.pptx  awkronos-strategy.docx  beacon.html  boss-your-car.html  capabilities.html  catastrophe-library-guide.html  catastrophe-mathematics.html  catastrophes.html  changelog-2.html  changelog-2025-11-21.html  changelog-dec-13-2025.html  changelog-dec-17-2025.html  changelog.html  chronos-research-audit.html  cognitive-architecture.html  cognitive-audit.html  color-palette.html  craft.html  crystal.html  design-system.css  echo.html  flow.html  forge.html  genesis-constellation.html  get-a-job.html  good-news-everyone.html  grove.html  hallows-and-colonies.html  hierarchy.html  holiday-hacking-2025-symphony.mid  holiday-hacking-2025.html  (+42 more)
orb/: .coveragerc  .cursorignore  .dockerignore  .editorconfig  .env.example  .env.test  .gcloudignore  .gitattributes  .gitignore  .mcp.json  .mutmut_config.py  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .secrets.baseline  ASSEMBLY_GUIDE.md  AUDIO_DESIGN_100.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_GRAPH.md  DEPLOYMENT.md  DOWNLOADS.md  Dockerfile  GAPS.md  HARDWARE_BOM.md  INTEGRATION_PROTOCOL.md  LICENSE  MARKETING_ANALYSIS.md  Makefile  ONE_CLICK_BUY.md  POWER_SYSTEM_COMPLETE.md  README.md  RISK_MITIGATION_PLAN.md  SECURITY.md  SYSTEM_DESIGN.md  UPWORK_JOB_POSTING.md  VALIDATION_PLAN.md  alternatives.html  assembly.html  bom.html  (+38 more)
orb/.claude/: README.md  notification-config.json  settings.json
orb/.claude/agents/: beacon.md  browser.md  crystal.md  flow.md  forge.md  grove.md  kagami.md  meta.md  nexus.md  parallel-coordination.md  spark.md
orb/.claude/hooks/: session-start.sh
orb/.claude/rules/: byzantine-quality.md  virtuoso.md
orb/.claude/skills/: SKILL_MAP.md
orb/.github/: CI_ARCHITECTURE.md
orb/.github/ISSUE_TEMPLATE/: config.yml
orb/.github/branch-protection/: byzantine-quality-gate.json
orb/.github/workflows/: _reusable-gradle-job.yml  _reusable-rust-job.yml  _reusable-video-recording.yml  android-unified.yml  apple-platform-tests.yml  apple-unified-builds.yml  auto-solver.yml  canvas-deploy.yml  coverage-tracking.yml  design-tokens.yml  desktop.yml  docker-hub-publish.yml  e2e-validation.yml  e2e-visual-regression.yml  gemini-video-analysis.yml  gpu-tests.yml  mesh-sdk.yml  metrics-tracking.yml  nightly-stress.yml  oauth-e2e.yml  rust-hub-ci.yml  safety-verification.yml  self-healing-ci.yml  smarthome-deploy.yml  unified-screenshots.yml  user-journey-tests.yml  visual-tests.yml
orb/.well-known/: security.txt
orb/apps/agents/: dashboard.html  ralph_viewer.html  rooms.html  scenes.html
orb/apps/github-template/: README.md  index.html
orb/apps/hub/: CAPABILITY_ASSESSMENT.md
orb/apps/qa-dashboard/: .env.example  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  (+1 more)
orb/bom/: core.yaml  kagami_orb_v3_bom.py  kagami_orb_v3_bom_model.xlsx
orb/cad/: ASSEMBLY_LAYOUT.md  ONSHAPE_SPEC.md  README.md  V3_ASSEMBLY_SPECIFICATION.md  VERIFIED_DIMENSIONS.md
orb/config/: admin_users.json  control4_director_token.txt  design-tokens.json  devices_discovered.yaml  domains.yaml  lg_tv_client_key.txt  location.yaml.template  model_cache.yaml  smart_home_discovery.example.yaml  smart_home_secrets.yaml.template  telemetry.yaml  tesla-private-key.pem  training.yaml
orb/deploy/: SECRETS.md
orb/docs/: 01_IDENTITY_AND_PHILOSOPHY.md  02_ARCHITECTURE_AND_COLONIES.md  04_WORLD_MODEL_AND_LEARNING.md  05_ACTION_SPACE_AND_INTEGRATIONS.md  06_API_AND_PLATFORMS.md  07_DESIGN_SYSTEM.md  08_MATHEMATICAL_FOUNDATIONS.md  09_VOICE_AND_AUDIO.md  10_SERVICES_AND_INFRASTRUCTURE.md  11_SMART_HOME_INTEGRATIONS.md  CITATIONS.md  INDEX.md  TPU_OPTIMIZATION_MASTER_PLAN.md
orb/examples/: api_usage.py  cbf_advanced_demo.py  cbf_essentials.py  cbf_training.py  client_apps_demo.py  consensus_aware_routing_demo.py  cross_domain_triggers_demo.py  decentralized_cbf_demo.py  demo_ambient_display.py  demo_ambient_organism_bridge.py  demo_training_stream.py  demo_voice_remixing.py  density_adaptive_stigmergy_demo.py  digital_integration_demo.py  efe_cbf_integration.py  emergency_halt_demo.py  fano_cbf_integration_example.py  gradient_surgery_example.py  hello_kagami.py  maslow_hierarchy_demo.py  memory_profiling_example.py  multi_colony_orchestration.py  optimization_integration.py  production_framework_demo.py  production_hardening_example.py  receipt_parent_linking_demo.py  resource_migration_examples.py  run_all.py  run_seven_colony_demo.sh  seven_colony_code_review.py  smarthome_demo.py  theory_of_mind_integration_demo.py  torch_compile_usage.py  unified_world_model_demo.py  virtual_hal_demo.py  wakefulness_demo.py  workshop_demo.py
orb/firmware/: FIRMWARE_PERFECT.md  HARDWARE_INTEGRATION.md
orb/hardware/: ALTERNATIVES.md  ALTERNATIVES_RESEARCH.md  AUDIO_DESIGN_PERFECT.md  BOM_PERFECT.md  CUSTOM_PCB.md  FMEA_V3.md  MAGLEV_WPT_INTEGRATION.md  MAGNETIC_PTZ.md  MECHANICAL_PERFECT.md  POWER_SYSTEM_PERFECT.md  THERMAL_ANALYSIS.md  THERMAL_DESIGN_PERFECT.md  VERIFIED_BOM_V3.1.md  kagami_orb_adafruit.txt  kagami_orb_bom.csv  kagami_orb_bom_v3.1.csv  kagami_orb_digikey.csv
orb/migrations/: README.md  env.py
orb/notebooks/: train_organism_rssm_tpu.ipynb
orb/pcb/: KICAD_SPEC.md  kagami_orb.kicad_pro  kagami_orb.kicad_sch  kagami_orb.kicad_sym  kagami_orb_audio.kicad_sch  kagami_orb_cm4.kicad_sch  kagami_orb_led.kicad_sch  kagami_orb_qcs6490.kicad_sch  kagami_orb_sensors.kicad_sch
orb/scripts/: README.md  __init__.py  detect_duplicates.py  generate_html_docs.py  kagami_api_launcher.py  kagami_status.py  smart_home_daemon.py  start-kagami.sh  verify_composio.py  verify_integrations.py  verify_precommit_setup.sh
orb/tests/: ARCHITECTURE.md  README.md  TEST_DEPENDENCIES.md  TEST_SPECIFICATIONS.md  __init__.py  conftest.py  conftest_env.py  conftest_smarthome.py  test_cbf_advanced.py  test_colony_capabilities.py
orb/tools/: ralph_tui.py
(+2574 files in other folders)
