[build-system]
requires = ["setuptools>=65", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kagami"
version = "1.0.0"
description = "K os - Geometric Intelligence System with Fractal Self-Organizing Agents"
readme = "docs/INDEX.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "K os Development Team", email = "dev@kagami-framework.org"}
]
keywords = ["ai", "agents", "geometric-deep-learning", "hyperbolic", "octonion", "fractal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# ============================================================================
# Core Dependencies (Required - Foundation Satellites)
# ============================================================================
dependencies = [
    "kagami-math>=0.1.0",
    "kagami-observability>=0.1.0",
    "kagami-smarthome>=2.0.0",
    "torch>=2.6.0,<3.0",
    "numpy>=2.1,<3.0",
]

[project.optional-dependencies]
# ============================================================================
# Modular Installation (Beacon's Strategic Plan — Dec 27, 2025)
# ============================================================================
# Tier 0: Core (Mandatory) — included in base dependencies above
core = [
    "torch>=2.6.0,<3.0",
    "numpy>=2.1,<3.0",
]

# Tier 1: Intelligence (World Model + Active Inference)
intelligence = [
    "kagami[core]",
    "transformers>=4.46.0,<5.0",
    "diffusers>=0.30.0,<1.0",
    "sentence-transformers>=2.2.0,<3.0",
]

# Tier 2: API & Deployment
api = [
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "pydantic>=2.0,<3.0",
]

# Tier 3: Research & Experimental
physics = [
    "genesis-world>=0.3.3",
]

ar = [
    "opencv-python>=4.8.0",
]

embodiment = [
    "kagami[physics]",
]

research = [
    "kagami[intelligence]",
    "kagami[physics]",
    "kagami[embodiment]",
]

# Legacy: Elysia RAG integration (Weaviate + DSPy)
elysia = [
    "elysia-ai>=1.0.0",
    "weaviate-client>=4.0.0",
    "dspy-ai>=2.0.0",
]

# Google Cloud TPU Training (January 2026)
# Enables: Native TPU support via JAX and PyTorch/XLA
# Installation: pip install kagami[tpu]
# Note: For actual TPU usage, install with special index:
#   pip install jax[tpu] -f https://storage.googleapis.com/jax-releases/libtpu_releases.html
#   pip install torch_xla[tpu] -f https://storage.googleapis.com/libtpu-releases/index.html
tpu = [
    "jax>=0.4.37",
    "jaxlib>=0.4.37",
    "flax>=0.10.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.9.0",
    "torch_xla>=2.6.0",
    "tensorboard>=2.15.0",
    "tensorboard-plugin-profile>=2.15.0",
]

# All optional features (internal dependencies)
all = [
    "kagami[intelligence]",
    "kagami[api]",
    "kagami[research]",
    "kagami[elysia]",
    "kagami[tpu]",
]

# ============================================================================
# Satellite Package Meta-Dependencies
# ============================================================================
# These install the separate satellite packages from PyPI
# Use: pip install kagami[with-api] or pip install kagami[with-all-satellites]
#
# NOTE: kagami-math and kagami-observability are REQUIRED (in dependencies above)

with-benchmarks = ["kagami-benchmarks>=0.1.0,<1.0.0"]
with-api = ["kagami-api>=1.0.0,<2.0.0"]
with-hal = ["kagami-hal>=1.0.0,<2.0.0"]
with-genesis = ["kagami-genesis>=1.0.0,<2.0.0"]
# with-ar = ["kagami-ar>=1.0.0,<2.0.0"]  # Package not yet created
with-integrations = ["kagami-integrations>=1.0.0,<2.0.0"]
with-knowledge = ["kagami-knowledge>=1.0.0,<2.0.0"]
# with-federated = ["kagami-federated>=1.0.0,<2.0.0"]  # Package not yet created
with-smarthome = ["kagami-smarthome>=1.0.0,<2.0.0"]

with-all-satellites = [
    "kagami-benchmarks>=0.1.0,<1.0.0",
    "kagami-api>=1.0.0,<2.0.0",
    "kagami-hal>=1.0.0,<2.0.0",
    "kagami-genesis>=1.0.0,<2.0.0",
    # "kagami-ar>=1.0.0,<2.0.0",  # Not yet created
    "kagami-integrations>=1.0.0,<2.0.0",
    "kagami-knowledge>=1.0.0,<2.0.0",
    # "kagami-federated>=1.0.0,<2.0.0",  # Not yet created
    "kagami-smarthome>=1.0.0,<2.0.0",
]

# Background Tasks (Celery)
tasks = [
    "celery[redis]>=5.3.0",
    "kombu>=5.3.0",
    "redis>=5.0.0,<6.0",
]

# Development dependencies
dev = [
    "kagami[all,tasks]",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-snapshot>=0.9",
    "syrupy>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "networkx>=3.3",
]
# Type stubs for external libraries
types = [
    "types-aiofiles>=24.1",
    "types-bleach>=6.0",
    "types-cachetools>=6.0",
    "types-cffi>=1.17",
    "types-colorama>=0.4",
    "types-croniter>=6.0",
    "types-decorator>=5.2",
    "types-docutils>=0.22",
    "types-filelock>=3.2",
    "types-html5lib>=1.1",
    "types-pillow>=10.2",
    "types-protobuf>=6.0",
    "types-psutil>=7.0",
    "types-pyOpenSSL>=24.0",
    "types-PyYAML>=6.0",
    "types-redis>=4.6",
    "types-requests>=2.32",
    "types-setuptools>=80.0",
    "types-tabulate>=0.9",
    "types-tqdm>=4.67",
    "types-webencodings>=0.5",
    "pandas-stubs>=2.0",
]

# ============================================================================
# CLI Entry Points
# ============================================================================
[project.scripts]
kagami-train = "kagami.core.training.cli:main"

[project.urls]
Homepage = "https://kagami.ai"
Documentation = "https://kagami.ai/docs"
Repository = "https://github.com/awkronos/kagami"
Changelog = "https://github.com/awkronos/kagami/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "packages"}
packages = ["kagami"]

[tool.setuptools.dynamic]
version = {attr = "kagami._version.__version__"}

# ============================================================================
# Code Quality Tools
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".venv", "venv", "build", "dist", "node_modules"]

[tool.mypy]
python_version = "3.11"
# NOTE: pydantic.mypy plugin is optional - Pydantic v2 works without it
# However, it's required for mypy to understand Field defaults correctly
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Enforce typed defs globally
disallow_incomplete_defs = true  # Enforce complete type annotations
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
exclude = [
    "^\\.venv/",
    "^venv/",
    "^build/",
    "^dist/",
    "^\\.eggs/",
    "^external/",
    "^third_party/",
    "^wandb/",
]

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "numpy.*",
    "scipy.*",
    "genesis.*",
    "composio.*",
]
ignore_missing_imports = true

# Ignore vendor code
[[tool.mypy.overrides]]
module = [
    "kagami.vendor.*",
]
ignore_errors = true

# Platform-specific HAL adapters (can't type-check on macOS)
[[tool.mypy.overrides]]
module = [
    "kagami.core.hal.adapters.windows.*",
    "kagami.core.hal.adapters.android.*",
    "kagami.core.hal.adapters.wasm.*",
    "kagami.core.hal.adapters.ios.*",
    "kagami.core.hal.adapters.watchos.*",
    "kagami.core.hal.adapters.wearos.*",
]
ignore_errors = true

# Relax checks for PyTorch-heavy modules (torch.compile, nn.Parameter causes false positives)
[[tool.mypy.overrides]]
module = [
    "kagami.core.world_model.*",
    "kagami.core.training.*",
    "kagami.core.math.*",
    "kagami.core.multimodal.*",
    "kagami.core.learning.*",
    "kagami.core.optimality.*",
    "kagami.core.mobiasm.*",
    "kagami.core.swarm.*",
    "kagami.core.hal.*",
    "kagami.core.attention.*",
    "kagami.core.active_inference.*",
    "kagami.core.strange_loops.*",
]
warn_unreachable = false
warn_return_any = false

# Enforce STRICT typing on safety-critical and core runtime modules
[[tool.mypy.overrides]]
module = [
    "kagami.core.safety.*",
    "kagami_api.security",
    "kagami.core.orchestrator.*",
    "kagami.core.memory.*",
    "kagami.core.learning.prioritized_replay",
    "kagami.core.learning.hindsight_replay",
    "kagami.core.instincts.*",
    "kagami_api.idempotency",
    "kagami_api.rate_limiter",
    "kagami_api.security_middleware",
    "kagami.core.receipts.*",
    "kagami.core.database.*",
    "kagami_api.routes.health",
    "kagami_api.routes.receipts",
    "kagami.core.fractal_agents.agent_safety",
    "kagami.core.unified_agents.fano_action_router",
    "kagami.core.integrations.*",
    "kagami.core.types.*",
    "kagami_observability.metrics.*",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--import-mode",
    "importlib",
    # NOTE: Using very high worker counts can destabilize the suite on macOS
    # (xdist workers being killed -> "node down", plus downstream scheduler errors).
    # Keep a conservative default; override locally via CLI if desired.
    "-n", "8",
    "--dist", "loadgroup",  # Better load balancing with group awareness
    "-q",  # Quiet mode - faster output
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Timeout settings: fail fast on stuck tests
timeout = 60  # Increased to 60s to accommodate training tests
# Thread-based timeouts can race with capture teardown under xdist ("Bad file descriptor").
# Signal-based timeouts are more stable on Unix-like systems (macOS/Linux).
timeout_method = "signal"
timeout_func_only = true  # Don't count fixture setup/teardown against timeout

# Custom markers for test categorization
markers = [
    # === Performance Tiers (primary categorization) ===
    "tier1: Tier 1 - Fast unit tests (<1s each, no external deps)",
    "tier2: Tier 2 - Integration tests (2-5s, requires services)",
    "tier3: Tier 3 - End-to-end tests (10-60s, full system)",
    "tier_unit: Tier 1 - Fast unit tests (<1s each, no external deps)",
    "tier_integration: Tier 2 - Integration tests (<5s, requires services)",
    "tier_e2e: Tier 3 - End-to-end tests (10-60s, full system)",

    # === Legacy markers (maintained for compatibility) ===
    "unit: Fast unit tests (<1s each)",
    "integration: Integration tests requiring external services",
    "e2e: End-to-end tests requiring full system",
    "slow: Slow tests (>10s)",

    # === Test categories ===
    "smoke: Smoke tests for API endpoints (requires running API on port 8001)",
    "chaos: Chaos engineering and resilience tests",
    "contract: Contract tests ensuring core API invariants remain intact",
    "performance: Performance and latency contract tests validating SLOs",
    "slo: SLO compliance tests verifying performance targets",
    "critical: Critical path tests (safety, API availability)",
    "forge: Forge pipeline and agent integration tests",
    "safety: Safety system validation tests",
    "property: Property-based and formal verification tests",
    "benchmark: Benchmark-oriented tests using pytest-benchmark",
    "load: marks tests as load tests (100+ agents, etc.)",
    "security: marks tests as security tests",
    "stress: marks tests as stress tests (multi-day, etc.)",
    "soak: marks tests as long-running soak tests",
    "verification: marks tests as formal verification tests",
    "statistical: marks tests requiring statistical analysis",

    # === Infrastructure requirements ===
    "requires_redis: Tests that require Redis",
    "requires_db: Tests that require database",
    "requires_live_server: marks tests that require a live uvicorn server (WebSocket integration tests)",
    "real_model: Tests hitting real-model integrations or heavy dependencies",
    "mock_services: Tests using mocked external services (Weaviate, Redis, etc.)",

    # === Test stability ===
    "flaky: Tests that may fail intermittently",
    "manual: Tests requiring manual setup or interaction (camera permissions, etc.)",

    # === Framework markers ===
    "timeout: Tests with explicit runtime budgets enforced via pytest-timeout",
    "asyncio: Tests requiring pytest-asyncio event loop support",
    "anyio: Tests executed with pytest-anyio event loop integration",
    "xdist_group: Tests grouped for pytest-xdist scheduling control",
    "serial: Tests that must run serially (no parallel execution) due to shared state",

    # === Distributed system markers ===
    "distributed: Tests for distributed system functionality (etcd, mesh, PBFT)",
]
# Ignore paths
norecursedirs = [
    ".git",
    ".tox",
    ".hypothesis",
    "dist",
    "build",
    "*.egg",
    "__pycache__",
    ".pytest_cache",
    "htmlcov",
    "artifacts",
    "checkpoints",
    "models",
    "var",
    "voices",
    "external",
]

# Logging
log_cli = false
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Environment variables for test services are set in tests/conftest.py
# See auto_mock_external_services fixture for production port configuration

# Warnings - suppress known 3rd-party library warnings
filterwarnings = [
    # etcd3 protobuf deprecation warnings
    "ignore::DeprecationWarning:etcd3.*",
    "ignore:pkg_resources is deprecated as an API.*:UserWarning",
    "ignore:.*pkg_resources\\.declare_namespace.*:DeprecationWarning",
    # Genesis SWIG bindings deprecation warnings (from sys and importlib)
    "ignore:builtin type swig.*:DeprecationWarning",
    "ignore:builtin type Swig.*:DeprecationWarning",
    # Redis/asyncio connection cleanup warnings (test teardown)
    "ignore:unclosed.*:ResourceWarning",
    "ignore:loop is closed:ResourceWarning",
    # Torch MPS pin_memory warning (not supported on Apple Silicon)
    "ignore:.*pin_memory.*not supported on MPS.*:UserWarning",
    # Starlette HTTP status deprecation
    "ignore:.*HTTP_422_UNPROCESSABLE_ENTITY.*:DeprecationWarning",
    # Pydantic field alias warning (known limitation)
    "ignore:.*validation_alias.*",
    # NumPy math warnings in edge case tests
    "ignore:divide by zero.*:RuntimeWarning",
    "ignore:invalid value encountered.*:RuntimeWarning",
    # Coroutine warnings from mocks/test teardown
    "ignore:coroutine.*was never awaited:RuntimeWarning",
    # Instructor/Gemini future warning
    "ignore::FutureWarning:instructor.*",
    # gstaichi (Genesis/Taichi) deprecation warnings
    "ignore::DeprecationWarning:gstaichi.*",
    "ignore:.*locale.getdefaultlocale.*:DeprecationWarning",
    "ignore:Support for class-based.*config.*:pydantic.warnings.PydanticDeprecatedSince20",
    # httpx deprecation warning (use content= instead of data=)
    "ignore:Use 'content=.*' to upload raw bytes.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["kagami"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70  # Enforce minimum coverage threshold (aligned with CI)
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Ruff (Fast Python Linter)
# ============================================================================
# NOTE: Canonical ruff configuration is in .ruff.toml (more comprehensive).
# This section is kept minimal for tools that don't read .ruff.toml.

[tool.ruff]
line-length = 100
target-version = "py311"
extend = ".ruff.toml"

# ============================================================================
# Mutation Testing (mutmut)
# ============================================================================
# Run: mutmut run --paths-to-mutate=kagami/core/safety
# View results: mutmut results
# HTML report: mutmut html

[tool.mutmut]
paths_to_mutate = "kagami/core/safety,kagami/core/orchestrator,kagami/core/receipts"
tests_dir = "tests/"
runner = "python -m pytest -x --tb=no -q"
dict_synonyms = "Struct,NamedStruct"

# Mutation testing thresholds
# Target: >80% mutation score for safety-critical code
[tool.mutmut.settings]
timeout_multiplier = 2.0
max_survived = 20  # Fail if >20 mutations survive

# Files to skip during mutation
[tool.mutmut.skip]
# Skip test files and config
patterns = [
    "test_*.py",
    "*_test.py",
    "conftest.py",
    "__init__.py",
]

# ============================================================================
# Pyright Configuration
# ============================================================================
# Type checking with pyright. We use "basic" mode globally, with strict mode
# enforced on safety-critical modules via CI rules.

[tool.pyright]
include = ["packages/kagami"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.*",
    "build",
    "dist",
    ".venv",
    "venv",
    "external",
    "third_party",
]

# Type checking mode - basic is reasonable for this mixed codebase
typeCheckingMode = "basic"

# Python version
pythonVersion = "3.11"
pythonPlatform = "Darwin"

# Report settings - balanced for productivity
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateUsage = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportIndexIssue = "warning"
reportAttributeAccessIssue = "warning"

# Relax these for torch/numpy heavy code
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportMissingParameterType = "none"
reportUnnecessaryTypeIgnoreComment = "none"

# Allow unbound variables in try/except patterns
reportPossiblyUnboundVariable = "warning"
