[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kagami-benchmarks"
version = "0.1.0"
description = "AI benchmarking suite for Kagami - MMLU, GSM8K, HumanEval, SWE-Bench, WebArena, and custom evaluations"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Tim Christensen", email = "tim@awkronos.com"},
]
keywords = ["benchmarks", "ai", "evaluation", "mmlu", "humaneval", "swe-bench"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "kagami>=1.0.0,<2.0.0",
    "datasets>=2.14.0",
    "evaluate>=0.4.0",
    "numpy>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

code = [
    "human-eval>=1.0",
]

web = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
]

all = [
    "kagami-benchmarks[code,web]",
]

[project.urls]
Homepage = "https://github.com/awkronos/kagami-benchmarks"
Repository = "https://github.com/awkronos/kagami-benchmarks"
Documentation = "https://github.com/awkronos/kagami-benchmarks#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["kagami_benchmarks*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501", "A003"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
