[package]
name = "kagami-pico"
version = "0.1.0"
edition = "2021"
description = "Kagami Pico Coprocessor — Real-time LED ring and audio I2S"
authors = ["Tim"]
license = "MIT"

# ============================================================================
# Embassy Async RTOS for RP2040
# ============================================================================

[dependencies]
# Embassy core - async executor
embassy-executor = { version = "0.7", features = ["arch-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-futures = { version = "0.1" }

# Embassy RP2040 HAL
embassy-rp = { version = "0.4", features = ["defmt", "time-driver", "critical-section-impl", "rp2040"] }

# Cortex-M support
# NOTE: Don't use critical-section-single-core here - embassy-rp provides critical-section-impl
cortex-m = { version = "0.7" }
cortex-m-rt = "0.7"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Logging
defmt = "0.3"
defmt-rtt = "0.4"

# Fixed-point math (for audio DSP)
fixed = "1.27"

# Portable atomic operations
portable-atomic = { version = "1.5", features = ["critical-section"] }

# Static cells for global state
static_cell = "2"

# Embedded async I/O traits
embedded-io-async = "0.6"

# Heapless collections (no-std)
heapless = "0.8"

# ============================================================================
# WS2812 LED Ring via PIO
# ============================================================================

# Smart LED traits
smart-leds = "0.4"

# WS2812 PIO driver for RP2040
# Uses the RP2040's Programmable I/O for precise timing
pio = "0.2"
pio-proc = "0.2"

# ============================================================================
# Audio I2S via PIO
# ============================================================================

# I2S will be implemented via PIO for sample-accurate timing
# No additional crates needed - using embassy-rp PIO

# ============================================================================
# Build Configuration
# ============================================================================

[build-dependencies]
# None needed - embassy handles everything

# ============================================================================
# Profile Configuration
# ============================================================================

[profile.release]
debug = 2
lto = true
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1

# ============================================================================
# Memory Layout
# ============================================================================

# The RP2040 has:
# - 264KB SRAM (can be split between cores)
# - 2MB Flash (typical Pico board)
#
# memory.x is required for embedded targets
