[package]
name = "kagami-client"
version = "0.1.0"
description = "鏡 Kagami — The Mirror Operating System Client"
authors = ["Tim"]
license = "MIT"
repository = "https://github.com/kagami/kagami-client"
edition = "2021"

[lib]
name = "kagami_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-clipboard-manager = "2"

# Crash reporting
sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "multipart"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Real-time WebSocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# Caching
moka = { version = "0.12", features = ["future"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1", features = ["v4"] }
lazy_static = "1.5"
open = "5.3.3"
dirs = "6.0.0"
ctrlc = "3.5.1"
once_cell = "1.19"

# Filesystem
glob = "0.3"

# Command log SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# System information
sysinfo = "0.32"

# Keychain/credential storage
keyring = "3"

# Audio capture for voice input
# cpal = "0.15"

# Base64 encoding for screen capture
base64 = "0.22"

# Kagami mesh SDK - shared circuit breaker
kagami-mesh-sdk = { path = "../../../../packages/kagami-mesh-sdk" }

# Hub client dependencies
hostname = "0.4"
whoami = "1"
hex = "0.4"
os_info = "3"

# mDNS discovery (optional)
mdns-sd = { version = "0.11", optional = true }

# World model inference (ONNX) - optional feature
ndarray = { version = "0.16", optional = true }
ort = { version = "2.0.0-rc.9", optional = true, default-features = false, features = ["ndarray"] }
parking_lot = { version = "0.12", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
# Core macOS frameworks for accessibility and events
core-foundation = "0.10"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows registry for auto-start
winreg = "0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
world-model = ["ndarray", "ort", "parking_lot"]
mdns = ["mdns-sd"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
