[package]
name = "kagami-orb-base"
version = "0.1.0"
edition = "2021"
authors = ["Kagami Team"]
description = "Base station firmware for Kagami Orb - ESP32-S3"
license = "MIT"
repository = "https://github.com/kagami/kagami-orb"

[dependencies]
# Async runtime for ESP32
embassy-executor = { version = "0.6", features = ["arch-xtensa", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
embassy-sync = "0.6"

# ESP32-S3 HAL
esp-hal = { version = "0.22", features = ["esp32s3", "async"] }
esp-hal-embassy = { version = "0.5", features = ["esp32s3"] }
esp-backtrace = { version = "0.14", features = ["esp32s3", "panic-handler", "println"] }
esp-println = { version = "0.12", features = ["esp32s3", "log"] }

# Peripheral drivers
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Math and DSP
libm = "0.2"
micromath = "2.1"

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive"] }
postcard = { version = "1.0", default-features = false }

# Logging
log = "0.4"
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

# Error handling
thiserror-no-std = "2.0"

[features]
default = ["log"]
defmt = ["dep:defmt", "dep:defmt-rtt"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
debug = true
